Incorporate PR review suggestions